@@ -5,11 +5,7 @@ import com.javarepowizards.portfoliomanager.dao.IPortfolioDAO;
 import com.javarepowizards.portfoliomanager.dao.StockDAO;
 import com.javarepowizards.portfoliomanager.operations.simulation.PortfolioSimulation;
 import com.javarepowizards.portfoliomanager.services.OllamaService;
-
-
 import com.javarepowizards.portfoliomanager.services.SimulationServices;
-import com.javarepowizards.portfoliomanager.services.OllamaService;
-
 import com.javarepowizards.portfoliomanager.services.PortfolioStatistics;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
@@ -20,18 +16,20 @@ import javafx.scene.control.Button;
 import javafx.scene.control.Label;
 import javafx.scene.control.ListView;
 import javafx.scene.control.Slider;
-import javafx.scene.control.TextArea;
-
 import javafx.concurrent.Task;
 import javafx.scene.control.ProgressIndicator;
-
-
 import java.net.URL;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.ResourceBundle;
 import java.util.stream.Collectors;
 
+/**
+ * Controller for the simulation view.
+ * Sets up simulation services and UI components,
+ * handles execution of portfolio simulations,
+ * and retrieves AI summaries of simulation results.
+ */
 public class SimulationController implements Initializable {
 
 
@@ -54,7 +52,7 @@ public class SimulationController implements Initializable {
     // References that must be provided externally (from MainController, for example)
     private IPortfolioDAO portfolioDAO;
     private StockDAO stockDAO;
-    private LocalDate mostRecentDate = LocalDate.of(2023, 12, 29);
+    private final LocalDate mostRecentDate = LocalDate.of(2023, 12, 29);
 
     // OllamaService instance to handle AI interactions
     private final OllamaService ollamaService = new OllamaService();
@@ -69,7 +67,6 @@ public class SimulationController implements Initializable {
      * @param url The location used to resolve relative paths for the root object, or null if the location is not known.
      * @param resourceBundle The resources used to localize the root object, or null if no localization is needed.
      */
-
     @Override
     public void initialize(URL url, ResourceBundle resourceBundle) {
 
@@ -93,7 +90,6 @@ public class SimulationController implements Initializable {
      * This method sets the initial text for labels, configures the axes of the chart,
      * and prepares the UI for displaying simulation results.
      */
-
     private void initializeUI(){
         // Set default labels and chart settings.
         labelBalance.setText("Balance: 0");
@@ -109,7 +105,6 @@ public class SimulationController implements Initializable {
      * Refreshes the portfolio data displayed in the UI.
      * This method updates the balance, portfolio value, and holdings list.
      */
-
     public void refreshPortfolioData() {
 
         if (portfolioDAO != null) {
@@ -121,19 +116,19 @@ public class SimulationController implements Initializable {
             List<String> rows = portfolioDAO.getHoldings().stream()
                     .map(en -> String.format("%s: %d shares @ $%,.2f = $%,.2f",
                             en.getStock().getSymbol(),
-                            (int) en.getAmountHeld(),
+                            en.getAmountHeld(),
                             en.getPurchasePrice(),
                             en.getMarketValue()))
                     .collect(Collectors.toList());
             listHoldings.getItems().setAll(rows);
         }
     }
+
     /**
      * Runs the portfolio simulation and updates the UI with the results.
      * This method checks if the Ollama service is available, builds the simulation engine,
      * prepares the UI for simulation, and handles success or failure of the simulation.
      */
-
     private void runSimulation() {
 
         if (!ollamaService.isServiceAvailable()) {           //  guard clause
@@ -172,14 +167,13 @@ public class SimulationController implements Initializable {
         updateChart(values);                                   // graph
         PortfolioStatistics.Metrics m =
                 PortfolioStatistics.compute(values, days);
-        updateMetricLabels(m, values.get(values.size() - 1));  // numbers
-        String prompt = services.buildPrompt(m, values.get(values.size() - 1));
+        updateMetricLabels(m, values.getLast());  // numbers
+        String prompt = services.buildPrompt(m, values.getLast());
         fetchAiSummary(prompt);                                // AI call
     }
 
     /** on simulation failure. */
     private void onSimFailure(Throwable ex) {
-        ex.printStackTrace();
         labelReview.setText("⚠️ Simulation failed: " + ex.getMessage());
         btnRunSimulation.setDisable(false);
         progressIndicator.setVisible(false);
@@ -199,7 +193,8 @@ public class SimulationController implements Initializable {
         for (int d = 0; d < vals.size(); d++) {
             s.getData().add(new XYChart.Data<>(d, vals.get(d)));
         }
-        portfolioLineChart.getData().setAll(s);
+
+        portfolioLineChart.getData().setAll(List.of(s));
     }
 
     /** Write numbers to the three metric labels + current value. */
@@ -247,5 +242,4 @@ public class SimulationController implements Initializable {
         progressIndicator.setVisible(false);
         btnRunSimulation.setDisable(false);
     }
-
 }
